; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-python.c_timer_remove.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-python.c_timer_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_python_script = type { i32 }
%struct.python_obs_callback = type { i32 }

@cur_python_script = common dso_local global %struct.obs_python_script* null, align 8
@.str = private unnamed_addr constant [2 x i8] c"O\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @timer_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @timer_remove(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.obs_python_script*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.python_obs_callback*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load %struct.obs_python_script*, %struct.obs_python_script** @cur_python_script, align 8
  store %struct.obs_python_script* %9, %struct.obs_python_script** %6, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @UNUSED_PARAMETER(i32* %10)
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @parse_args(i32* %12, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32** %7)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %17, label %15

15:                                               ; preds = %2
  %16 = call i32* (...) @python_none()
  store i32* %16, i32** %3, align 8
  br label %28

17:                                               ; preds = %2
  %18 = load %struct.obs_python_script*, %struct.obs_python_script** %6, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = call %struct.python_obs_callback* @find_python_obs_callback(%struct.obs_python_script* %18, i32* %19)
  store %struct.python_obs_callback* %20, %struct.python_obs_callback** %8, align 8
  %21 = load %struct.python_obs_callback*, %struct.python_obs_callback** %8, align 8
  %22 = icmp ne %struct.python_obs_callback* %21, null
  br i1 %22, label %23, label %26

23:                                               ; preds = %17
  %24 = load %struct.python_obs_callback*, %struct.python_obs_callback** %8, align 8
  %25 = call i32 @remove_python_obs_callback(%struct.python_obs_callback* %24)
  br label %26

26:                                               ; preds = %23, %17
  %27 = call i32* (...) @python_none()
  store i32* %27, i32** %3, align 8
  br label %28

28:                                               ; preds = %26, %15
  %29 = load i32*, i32** %3, align 8
  ret i32* %29
}

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1

declare dso_local i32 @parse_args(i32*, i8*, i32**) #1

declare dso_local i32* @python_none(...) #1

declare dso_local %struct.python_obs_callback* @find_python_obs_callback(%struct.obs_python_script*, i32*) #1

declare dso_local i32 @remove_python_obs_callback(%struct.python_obs_callback*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
